[gd_scene load_steps=13 format=3 uid="uid://b75bmdsfxpn81"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_2jpx2"]
[ext_resource type="Texture2D" uid="uid://uu6d8anrpwy1" path="res://assets/enemy_saucer.png" id="1_skxs2"]
[ext_resource type="PackedScene" uid="uid://3sg2gplyw41d" path="res://scenes/enemy_bullet.tscn" id="2_b6ntr"]
[ext_resource type="AudioStream" uid="uid://dj208sg8g2ipi" path="res://assets/sounds/enemy_laser.wav" id="4_1nnpd"]
[ext_resource type="Texture2D" uid="uid://c0468ckde0ly4" path="res://assets/corona.png" id="4_qxnp1"]
[ext_resource type="AudioStream" uid="uid://cyaymgin2npl6" path="res://assets/sounds/explosion.wav" id="5_tu8kh"]
[ext_resource type="PackedScene" uid="uid://cel0mu40i1nub" path="res://scenes/explosion.tscn" id="6_gmmqd"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_rxahv"]
blend_mode = 1

[sub_resource type="Curve" id="Curve_vjniy"]
max_value = 100.0
_data = [Vector2(0, 81.3187), 0.0, 0.0, 0, 0, Vector2(1, 19.7802), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_f7pjy"]
_data = [Vector2(0, 0.824176), 0.0, 0.0, 0, 0, Vector2(1, 0.208791), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CircleShape2D" id="CircleShape2D_7w5gu"]
radius = 35.0571

[sub_resource type="Curve2D" id="Curve2D_u0qx0"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -96, 567, -113.369, 118.981, 113.369, -118.981, 88, 281, -69.5926, 23.5717, 69.5926, -23.5717, 298, 128, -52.7557, -52.7557, 52.7557, 52.7557, 554, 153, 39.2862, -92.0419, -39.2862, 92.0419, 622, 397, 102.144, 2.24492, -102.144, -2.24492, 414, 583, 28.0616, 88.6745, -28.0616, -88.6745, 237, 495, -94.2868, 21.3268, 94.2868, -21.3268, 341, 312, -90.9194, -58.368, 90.9194, 58.368, 650, 356, -84.1847, -48.2659, 84.1847, 48.2659, 756, 512, -26.9391, 38.1637, 26.9391, -38.1637, 941, 435, -13.4695, 35.9188, 13.4695, -35.9188, 1016, 271, -46.0209, 48.2659, 46.0209, -48.2659, 1068, 163, -57.2456, 6.73477, 57.2456, -6.73477, 1220, 100, 0, 0, 0, 0, 1372, 97)
}
point_count = 15

[node name="Enemy" type="Area2D" groups=["enemies"]]
script = ExtResource("1_2jpx2")
bullet_scene = ExtResource("2_b6ntr")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_rxahv")
amount = 20
texture = ExtResource("4_qxnp1")
emission_shape = 1
emission_sphere_radius = 15.0
direction = Vector2(0, 0)
gravity = Vector2(0, 0)
damping_curve = SubResource("Curve_vjniy")
scale_amount_min = 0.1
scale_amount_max = 0.1
scale_amount_curve = SubResource("Curve_f7pjy")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_skxs2")
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_7w5gu")

[node name="Paths" type="Node" parent="."]

[node name="Path1" type="Path2D" parent="Paths"]
curve = SubResource("Curve2D_u0qx0")

[node name="Path2" type="Path2D" parent="Paths"]
position = Vector2(1155, 688)
rotation = -3.12694
scale = Vector2(1, 1)
curve = SubResource("Curve2D_u0qx0")

[node name="Path3" type="Path2D" parent="Paths"]
position = Vector2(1140, -14)
rotation = 1.57843
scale = Vector2(0.580376, 1.652)
curve = SubResource("Curve2D_u0qx0")

[node name="Path4" type="Path2D" parent="Paths"]
position = Vector2(27, 645)
rotation = -1.56941
scale = Vector2(0.580376, 1.652)
curve = SubResource("Curve2D_u0qx0")

[node name="Explosion" parent="." instance=ExtResource("6_gmmqd")]

[node name="GunCooldown" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="BurstTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="EnemyLaserSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_1nnpd")
volume_db = -10.0

[node name="ExplosionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_tu8kh")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="GunCooldown" to="." method="_on_gun_cooldown_timeout"]
